# zed-test

./: .gitignore  CMakeLists copy.txt  CMakeLists origin.txt  CMakeLists.txt  README.md  main.cpp
includes/: poGst.hpp  portalComm.hpp  portalRTC.hpp  portalZed.hpp
lib/: CMakeLists.txt  poGst.cpp  portalComm.cpp  portalRTC.cpp  portalZed.cpp
